--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
-    <string name="app_name">Medicines_android</string>
+    <string name="app_name">LekInfo.</string>
+    <string name="header_home_text">Всего</string>
+    <string name="result_count_number">5750 шт.</string>
+    <string name="search_bar_title">Поиск по всем лекарствам</string>
 </resources>
